--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Archive APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-release
+        name: app-release.apk
         path: app/build/outputs/apk/release/app-release.apk
 
     - name: Create Release
