--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,9 +3,9 @@
   "packageName": "de.timklge.karoopowerbar",
   "iconUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/karoo-powerbar.png",
   "latestApkUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/app-release.apk",
-  "latestVersion": "1.2.2",
-  "latestVersionCode": 7,
+  "latestVersion": "1.2.3",
+  "latestVersionCode": 8,
   "developer": "timklge",
   "description": "Adds a colored power bar to the bottom of the screen",
-  "releaseNotes": "Slightly adjusts bar appearance. First build with new CI/CD pipeline."
+  "releaseNotes": "Add option to set bar to single color"
 }
