--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,9 +3,9 @@
   "packageName": "de.timklge.karoopowerbar",
   "iconUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/karoo-powerbar.png",
   "latestApkUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/app-release.apk",
-  "latestVersion": "1.2.3",
-  "latestVersionCode": 8,
+  "latestVersion": "1.3",
+  "latestVersionCode": 9,
   "developer": "timklge",
   "description": "Adds a colored power bar to the bottom of the screen",
-  "releaseNotes": "Add option to set bar to single color"
+  "releaseNotes": "Add size setting, cadence and speed data sources"
 }
