--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,9 +3,9 @@
   "packageName": "de.timklge.karoopowerbar",
   "iconUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/karoo-powerbar.png",
   "latestApkUrl": "https://github.com/timklge/karoo-powerbar/releases/latest/download/app-release.apk",
-  "latestVersion": "1.3.3",
-  "latestVersionCode": 12,
+  "latestVersion": "1.3.4",
+  "latestVersionCode": 13,
   "developer": "timklge",
   "description": "Adds a colored power bar to the bottom of the screen",
-  "releaseNotes": "Adds option to set a custom range for power and heart rate bar"
+  "releaseNotes": "Adds option to set a custom range for power and heart rate bar. Optimize build."
 }
