--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,12 +52,18 @@ jobs:
 
     - name: Create Release
       id: create_release
-      uses: ncipollo/release-action@v1
+      uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        files: |
+          app/build/outputs/apk/release/app-release.apk
+          app/manifest.json
+          app/karoo-powerbar.png
+          powerbar_min.gif
+          powerbar0.png
+          powerbar2.png
         name: ${{ github.ref_name }}
         prerelease: false
         generateReleaseNotes: true
-        artifacts: app/build/outputs/apk/release/app-release.apk, app/manifest.json, app/karoo-powerbar.png, powerbar_min.gif, powerbar0.png, powerbar2.png
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
