--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,6 +45,12 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Archive APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release.apk
+        path: app/build/outputs/apk/release/app-release.apk
+
     - name: Create Release
       id: create_release
       uses: softprops/action-gh-release@v2
